Fix npm warnings, add 100% height to fix excess whitespace bug

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 .App {
   text-align: center;
+  height: 100%;
+  background: #c9a941;
 }
 
 .Sidebar {
@@ -109,9 +111,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.ant-layout, #root {
+  height: 100%;
 }
